Revert Equation back to equation

--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -184,13 +184,13 @@ The slice length and transition length for the 262-bin Bark scale sliCQT with fr
 
 The input data to xumx-sliCQ was split into to sequences of a one second duration. The slice length of the chosen scale results in one second of audio containing nine slices. Each slice consists of a number of time coefficients that varies with the frequency bin. The ragged transform contains 70 buckets of frequency bins grouped by their time resolution. Tables \ref{table:slicqdim1} and \ref{table:slicqdim2} show each bucket in the ragged transform with its original 3D shape ($\text{slice} \times \text{frequency} \times \text{time}$), and the flattened and overlap-added 2D shapes ($\text{time} \times \text{frequency}$).
 
-Note that the channel dimension is omitted from the table. There is one spectrogram for each channel of audio, resulting in an additional $(,2)$ dimension added to the sliCQT shape from the two channels of the stereo training data. The flattened shape is a result of concatenating the $\text{slice} \times \text{time}$ blocks together; e.g., to flatten $9 \times 10$ results in $90$. The overlap-add considers a $\sfrac{\text{time}}{2}$ overlap between each adjacent slice of size.
+Note that the channel dimension is omitted from the table. There is one spectrogram for each channel of audio, resulting in an additional $(, 2)$ dimension added to the sliCQT shape from the two channels of the stereo training data. The flattened shape is a result of concatenating the $\text{slice} \times \text{time}$ blocks together; e.g., to flatten $9 \times 10$ results in $90$. The overlap-add considers a $\sfrac{\text{time}}{2}$ overlap between each adjacent slice of size.
 
 It is instructive to compare the dimensionality of the chosen sliCQT parameters to the matrix form of the sliCQT, and to the STFT with a window size of 4,096 and an overlap of 1,024.
 
 The matrix form of the same sliCQT results in a 3D $\text{slice} \times \text{frequency} \times \text{time}$ shape of $9 \times 263 \times 292$, representing the same nine slices for one second of audio as the ragged transform, and 263 frequency bins, which includes the 0--32.9 Hz bin added to the 262 we specified between 32.9--22,050 Hz. The time coefficients are of length 292, which as shown in Table \ref{table:slicqdim2} is the maximum time resolution of the highest frequency bin. The other frequency bins have some operations performed including zero-padding to fit the same dimension. The 2D $\text{frequency} \times \text{time}$ shapes are $263 \times 1{,}022$ for the overlap-added spectrogram and $263 \times 1{,}752$ for the flattened spectrogram.
 
-The STFT with a window of 4,096 samples and overlap of 1,024 samples results in a 2D $\text{frequency} \times \text{time}$ transform of shape $2{,}049 \times 40$, where 2,049 is the number of non-redundant output frequencies of the STFT, computed by $\sfrac{4{,}096}{2} + 1$, and 40 is the number of temporal frames computed from the signal length (or 44,100 samples for 1s of audio), window size, and overlap using Equation \ref{equation:stftframes}:
+The STFT with a window of 4,096 samples and overlap of 1,024 samples results in a 2D $\text{frequency} \times \text{time}$ transform of shape $2{,}049 \times 40$, where 2,049 is the number of non-redundant output frequencies of the STFT, computed by $\sfrac{4{,}096}{2} + 1$, and 40 is the number of temporal frames computed from the signal length (or 44,100 samples for 1s of audio), window size, and overlap using equation \ref{equation:stftframes}:
 \begin{align}
 	\text{floor}(\frac{44{,}100-4{,}096}{1{,}024}) + 1 = 40\tag{37}\label{equation:stftframes}
 \end{align}
