Correct some proposal issues

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -28,7 +28,7 @@
 
 @article{lstmrnngru,
 author = {Aslam, Muhammad and Lee, Jae-Myeong and Kim, Hyung-Seung and Lee, Seung-Jae and Hong, Sugwon},
-title = {Deep learning models for long-term solar radiation forecasting considering microgrid installation: a comparative study},
+title = {Deep learning models for long-term solar radiation forecasting considering microgrid installation: A comparative study},
 journal = {Energies},
 volume = {13},
 number = {1},
@@ -41,7 +41,7 @@ doi = {10.3390/en13010147}
 
 @inproceedings{speechmask,
   author={Fahimeh Bahmaninezhad and Jian Wu and Rongzhi Gu and Shi-Xiong Zhang and Yong Xu and Meng Yu and Dong Yu},
-  title={{A comprehensive study of speech separation: spectrogram vs waveform separation}},
+  title={{A comprehensive study of speech separation: Spectrogram vs waveform separation}},
   year={2019},
   booktitle={Proceedings of Interspeech 2019},
   pages={4574--4578},
@@ -49,7 +49,7 @@ doi = {10.3390/en13010147}
 }
 
 @article{balazs,
-author = {Balazs, Peter and Doerfler, Monika and Jaillet, F and Holighaus, Nicki and Velasco, Gino Angelo},
+author = {Balazs, Peter and Doerfler, Monika and Jaillet, Florent and Holighaus, Nicki and Velasco, Gino Angelo},
 year = {2011},
 pages = {1481--1496},
 title = {Theory, implementation and applications of nonstationary Gabor frames},
@@ -83,7 +83,7 @@ doi = {10.1007/978-1-62703-748-8_7}
 
 @book{pythonscience,
 author = {Bayen, Alexandre and Kong, Qingkai and Siauw, Timmy},
-title = {Python programming and numerical methods: a guide for engineers and scientists},
+title = {Python programming and numerical methods: A guide for engineers and scientists},
 year = {2020},
 publisher = {Elsevier},
 edition = {1},
@@ -111,7 +111,7 @@ doi = {10.1007/978-1-4842-2734-3_1}
 
 @article{mldspmix,
 author = {Bianco, Michael J. and Gerstoft, Peter and Traer, James and Ozanich, Emma and Roch, Marie A. and Gannot, Sharon  and Deledalle, Charles-Alban},
-title = {Machine learning in acoustics: theory and applications},
+title = {Machine learning in acoustics: Theory and applications},
 journal = {The Journal of the Acoustical Society of America},
 volume = {146},
 number = {5},
@@ -120,15 +120,14 @@ year = {2019},
 doi = {10.1121/1.5133944},
 }
 
-@misc{otherdataset2,
+@online{otherdataset2,
   author       = {Rachel Bittner and
                   Justin Salamon and
                   Mike Tierney and
                   Matthias Mauch and
                   Chris Cannam and
                   Juan Pablo Bello},
-  title        = {{MedleyDB Audio: A Dataset of Multitrack Audio for 
-                   Music Research}},
+  title        = {MedleyDB audio: A dataset of multitrack audio for music research},
   year         = {2014},
   publisher    = {Zenodo},
   version      = {1.0},
@@ -146,7 +145,7 @@ doi = {10.1121/1.5133944},
 @article{musicsepgood,
 author = {Cano, Estefanía and Fitzgerald, Derry and Liutkus, Antoine and Plumbley, Mark and Stöter, Fabian-Robert},
 year = {2018},
-title = {Musical source separation: an introduction},
+title = {Musical source separation: An introduction},
 volume = {36},
 number = {1},
 pages = {31--40},
@@ -309,7 +308,7 @@ author = {D{\"o}rfler, Monika},
 year = {2002},
 title = {Gabor analysis for a class of signals called music},
 url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf},
-school = {NuHAG, University of Vienna},
+school = {Numerical Harmonic Analysis Group, University of Vienna},
 }
 
 @inproceedings{driedger,
@@ -343,7 +342,7 @@ url={https://hal.inria.fr/inria-00435807v2/document}
 @article{cvml,
 author = {Esposito, Floriana and Malerba, Donato},
 year = {2010},
-title = {Editorial: machine learning in computer vision},
+title = {Editorial: Machine learning in computer vision},
 volume = {15},
 number = {8},
 pages = {693--705},
@@ -442,7 +441,7 @@ url={http://www.granularsynthesis.com/pdf/gabor.pdf}
 @article{mlopt1,
 author = {Gambella, Claudio and Ghaddar, Bissan and Naoum-Sawaya, Joe},
 year = {2020},
-title = {Optimization problems for machine learning: a survey},
+title = {Optimization problems for machine learning: A survey},
 volume = {290},
 number = {3},
 pages = {807--828},
@@ -610,11 +609,8 @@ author = {Hummersone, Christopher and Stokes, Toby and Brookes, Tim},
 year = {2014},
 pages = {349--368},
 title = {On the ideal ratio mask as the goal of computational auditory scene analysis},
-booktitle = {Blind Source Separation: Advances in Theory, Algorithms, and Applications},
 chapter = {12},
-editor = {Naik, Ganesh R. and Wang Wenwu},
-publisher = {Springer-Verlag},
-isbn = {978-3-642-55015-7},
+crossref = {blind2},
 doi = {10.1007/978-3-642-55016-4_12}
 }
 
@@ -632,7 +628,7 @@ doi={10.1109/72.761722}}
 author = {Hyvärinen, A and Oja, Erkki},
 year = {2000},
 pages = {411--430},
-title = {Independent component analysis: algorithms and applications},
+title = {Independent component analysis: Algorithms and applications},
 volume = {13},
 number = {4-5},
 journal = {Neural networks: the official journal of the International Neural Network Society},
@@ -642,7 +638,7 @@ doi = {10.1016/S0893-6080(00)00026-5}
 @inproceedings{generalai,
 author = {Iman, Mohammadreza and Arabnia, Hamid and Branchinst, Robert},
 year = {2020},
-title = {Pathways to artificial general intelligence: a brief overview of developments and ethical issues via artificial intelligence, machine learning, deep learning, and data science},
+title = {Pathways to artificial general intelligence: A brief overview of developments and ethical issues via artificial intelligence, machine learning, deep learning, and data science},
 booktitle = {The 22nd International Conference on Artificial Intelligence},
 }
 
@@ -669,7 +665,7 @@ doi = {10.1016/j.cub.2019.08.020},
 @article{tfjigsaw,
 author = {Jaillet, Florent and Torrésani, Bruno},
 year = {2007},
-title = {Time-Frequency jigsaw puzzle: adaptive multiwindow and multilayered Gabor expansions},
+title = {Time-Frequency jigsaw puzzle: Adaptive multiwindow and multilayered Gabor expansions},
 volume = {05},
 number = {02},
 pages = {293--315},
@@ -689,7 +685,7 @@ doi={10.1109/ICASSP.2012.6287872}}
 author = {Johri, Prashant and Khatri, Sunil Kumar and Al-Taani, Ahmad and Sabharwal, Munish and Suvanov, Shakhzod and Chauhan, Avneesh},
 year = {2021},
 pages = {365--375},
-title = {Natural language processing: history, evolution, application, and future work},
+title = {Natural language processing: History, evolution, application, and future work},
 booktitle = {Lecture Notes in Networks and Systems},
 publisher = {Springer},
 volume = {167},
@@ -732,7 +728,7 @@ author = {Ketkar, Nikhil},
 year = {2017},
 pages = {111--130},
 title = {Stochastic gradient descent},
-booktitle = {Deep learning with Python: a hands-on introduction},
+booktitle = {Deep learning with Python: A hands-on introduction},
 publisher = {Apress},
 isbn = {978-1-4842-2765-7},
 doi = {10.1007/978-1-4842-2766-4_8}
@@ -768,7 +764,7 @@ journal = {Applied Optics},
 number = {20},
 pages = {3624--3632},
 publisher = {OSA},
-title = {Gabor: frequency, time, and memory},
+title = {Gabor: Frequency, time, and memory},
 volume = {21},
 year = {1982},
 %url = {http://ao.osa.org/abstract.cfm?URI=ao-21-20-3624},
@@ -791,7 +787,7 @@ author = {Jelena Kovačević and Amina Chebira},
 
 @book{gabordiagrams,
 author = {Kutz, J. Nathan},
-title = {Data-driven modeling \& scientific computation: methods for complex systems},
+title = {Data-driven modeling \& scientific computation: Methods for complex systems},
 year = {2013},
 isbn = {0199660344},
 publisher = {Oxford University Press},
@@ -820,7 +816,7 @@ journal = {Proceedings of the 28th International Conference on Machine Learning 
 }
 
 @article{roux2018sdr,
-      title={SDR: half-baked or well done?}, 
+      title={SDR: Half-baked or well done?}, 
       author={Jonathan {Le Roux} and Scott Wisdom and Hakan Erdogan and John R. Hershey},
       year={2018},
   journal={arXiv preprint arXiv:1811.02508},
@@ -890,7 +886,7 @@ doi={10.1109/WIAMIS.2013.6616139},
 }
 
 @article{endtoend,
-      title={End-to-end music source separation: is it possible in the waveform domain?}, 
+      title={End-to-end music source separation: Is it possible in the waveform domain?}, 
       author={Lluís, Francesc and Pons, Jordo and Serra, Xavier},
       year={2019},
   journal={arXiv preprint arXiv:1810.12187},
@@ -901,7 +897,7 @@ doi={10.1109/WIAMIS.2013.6616139},
 author = {Loizou, Philopos C.},
 year = {2017},
 publisher = {CRC Press},
-title = {Speech enhancement: theory and practice},
+title = {Speech enhancement: Theory and practice},
 edition = {2},
 isbn = {9781138075573}
 }
@@ -909,7 +905,7 @@ isbn = {9781138075573}
 @article{fouriermusic,
 author = {Lostanlen, Vincent and Andén, Joakim and Lagrange, Mathieu},
 year = {2019},
-title = {Fourier at the heart of computer music: from harmonic sounds to texture},
+title = {Fourier at the heart of computer music: From harmonic sounds to texture},
 volume = {20},
 number = {5},
 journal = {Comptes Rendus Physique},
@@ -938,7 +934,7 @@ number = {CS-91-144}
 @article{warped1,
 author={Anamitra Makur and Sanjit K. Mitra},
 journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
-title={Warped discrete-Fourier transform: theory and applications},
+title={Warped discrete-Fourier transform: Theory and applications},
 year={2001},
 volume={48},
 number={9},
@@ -1033,7 +1029,7 @@ url={https://arxiv.org/abs/2108.13559}
 @article{deepcpuinf,
 author={Mittal, Sparsh and Rajput, Poonam and Subramoney, Sreenivas},
 journal={IEEE Transactions on Neural Networks and Learning Systems},
-title={A survey of deep learning on CPUs: opportunities and co-optimizations},
+title={A survey of deep learning on CPUs: Opportunities and co-optimizations},
 year={2021},
 pages={1--21},
 doi={10.1109/TNNLS.2021.3071762}
@@ -1072,10 +1068,10 @@ doi = {10.1109/JSTSP.2011.2112333}
 }
 
 @book{blind2,
-author = {Naik, G. R. and Wang, W.},
+author = {Naik, Ganesh R. and Wang Wenwu},
 year = {2014},
-publisher = {Springer-Verlag Berlin Heidelberg},
-title = {Blind source separation: advances in theory, algorithms, and applications},
+publisher = {Springer-Verlag},
+title = {Blind source separation: Advances in theory, algorithms, and applications},
 edition = {1},
 isbn = {9783642550164}
 }
@@ -1290,7 +1286,7 @@ address = {USA},
 edition = {1st},
 }
 
-@misc{musdb18,
+@online{musdb18,
   author       = {Rafii, Zafar and
                   Liutkus, Antoine and
                   Fabian-Robert St{\"o}ter and
@@ -1301,7 +1297,7 @@ edition = {1st},
   doi          = {10.5281/zenodo.1117372},
 }
 
-@misc{musdb18hq,
+@online{musdb18hq,
   author       = {Rafii, Zafar and
                   Liutkus, Antoine and
                   Stöter, Fabian-Robert and
@@ -1448,7 +1444,7 @@ url={https://arxiv.org/abs/1504.07372}
 @inproceedings{sisec2018,
 title={The 2018 signal separation evaluation campaign}, 
 author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
-  editor = {Deville Y. and Gannot S. and Mason R. and Plumbley M. and Ward D.},
+  editor = {Yannick Deville and Sharon Gannot and Russell Mason and Mark Plumbley and Dominic Ward},
   pages = {293--305},
   publisher = {Springer International Publishing},
   year = {2018},
