--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -361,7 +361,7 @@ doi = {10.13128/Music_Tec-13210}
 }
 
 @techreport{2dconv,
-author = {Fedorishin, Dennis and Sankaran, Nishant and Mohan, Deen and Birgiolas, Justas and Schneider, Philip and Setlur, Srirangaraj, and Govindaraju, Venu},
+author = {Fedorishin, Dennis and Sankaran, Nishant and Mohan, Deen and Birgiolas, Justas and Schneider, Philip and Setlur, Srirangaraj and Govindaraju, Venu},
 title = {Investigating waveform and spectrogram feature fusion for acoustic scene classification},
 year = {2021},
 institution = {Detection and Classification of Acoustic Scenes and Events 2021},
@@ -1191,7 +1191,7 @@ doi = {10.1103/PhysRevLett.110.044301}
 @inproceedings{tcn,
 author={Pandey, Ashutosh and Wang, DeLiang},
 booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-title={TCNN: temporal convolutional neural network for real-time speech enhancement in the time domain},
+title={TCNN: Temporal convolutional neural network for real-time speech enhancement in the time domain},
 year={2019},
 pages={6875--6879},
 doi={10.1109/ICASSP.2019.8683634}
@@ -1503,7 +1503,7 @@ url = {https://www.univie.ac.at/nonstatgab/pdf_files/dohogrve11_amsart.pdf},
 @article{musicseptechniques2,
 author={Vincent, Emmanuel and Bertin, Nancy and Gribonval, Remi and Bimbot, Frederic},
 journal={IEEE Signal Processing Magazine},
-title={From blind to guided audio source separation: how models and side information can improve the separation of sound},
+title={From blind to guided audio source separation: How models and side information can improve the separation of sound},
 year={2014},
 volume={31},
 number={3},
@@ -1559,7 +1559,7 @@ doi={10.1109/ICASSP.2005.1415676}}
 author = {Walt, {Stéfan van der} and Colbert, S. and Varoquaux, Gael},
 year = {2011},
 pages = {22--30},
-title = {The NumPy array: a structure for efficient numerical computation},
+title = {The NumPy array: A structure for efficient numerical computation},
 volume = {13},
 number = {2},
 journal = {Computing in Science \& Engineering},
@@ -1570,7 +1570,7 @@ doi = {10.1109/MCSE.2011.37}
 author = {Wang, Ye and Vilermo, Miikka},
 year = {2003},
 pages = {52--61},
-title = {Modified discrete cosine transform: its implications for audio coding and error concealment},
+title = {Modified discrete cosine transform: Its implications for audio coding and error concealment},
 volume = {51},
 journal = {Journal of the The Audio Engineering Society},
 url = {https://smcnus.comp.nus.edu.sg/wp-content/uploads/papers/5.Error_Robust_Audio_Streaming/2002_The_Modified_Discrete_Cosine_Transform-Its_Implications_for_Audio_Coding_and_Error_Concealment.pdf}
@@ -1614,7 +1614,7 @@ doi={10.1109/MLSP.2014.6958893}}
 @inproceedings{deepcpuinf2,
 author={Wu, Carole-Jean and Brooks, David and Chen, Kevin and Chen, Douglas and Choudhury, Sy and Dukhan, Marat and Hazelwood, Kim and Isaac, Eldad and Jia, Yangqing and Jia, Bill and Leyvand, Tommer and Lu, Hao and Lu, Yang and Qiao, Lin and Reagen, Brandon and Spisak, Joe and Sun, Fei and Tulloch, Andrew and Vajda, Peter and Wang, Xiaodong and Wang, Yanghan and Wasti, Bram and Wu, Yiming and Xian, Ran and Yoo, Sungjoo and Zhang, Peizhao},
 booktitle={IEEE International Symposium on High Performance Computer Architecture (HPCA)},
-title={Machine learning at Facebook: understanding inference at the edge},
+title={Machine learning at Facebook: Understanding inference at the edge},
 year={2019},
 pages={331--344},
 doi={10.1109/HPCA.2019.00048}}
@@ -1622,7 +1622,7 @@ doi={10.1109/HPCA.2019.00048}}
 @article{splitvaliddata,
 author = {Xu, Yun and Goodacre, Royston},
 year = {2018},
-title = {On splitting training and validation set: a comparative study of cross-validation, bootstrap and systematic sampling for estimating the generalization performance of supervised learning},
+title = {On splitting training and validation set: A comparative study of cross-validation, bootstrap and systematic sampling for estimating the generalization performance of supervised learning},
 volume = {2},
 number = {3},
 pages = {249--262},
